# ntask

./: CMakeLists.txt  README.md  config.json  dangerous_bend.cpp  dangerous_bend.hpp  main.cpp
.github/workflows/: cmake.yml  cpp.yml
include/ntask/: dangerous_bend.hpp
src/: dangerous_bend.cpp  main.cpp
